--- a/src/lib/message/CMakeLists.txt
+++ b/src/lib/message/CMakeLists.txt
@@ -2,11 +2,14 @@ set(HEADERS
         include/Message/message.h
         include/Message/serialization.h
         include/Message/parsing.h
+        include/Message/network.h
 )
 
 set(SOURCES
         src/message.cpp
         src/parsing.cpp
+        src/logging.cpp
+        src/network.cpp
 )
 
 set(PRIVATE_HEADERS
@@ -22,4 +25,4 @@ add_library(message
 
 target_include_directories(message PUBLIC include PRIVATE include/Message)
 
-target_link_libraries(message PUBLIC Qt6::Core boost::boost PRIVATE utils)
+target_link_libraries(message PUBLIC Qt6::Core Qt6::WebSockets Boost::headers PRIVATE utils)
