--- a/src/server/service/CMakeLists.txt
+++ b/src/server/service/CMakeLists.txt
@@ -1,10 +1,12 @@
 set(SOURCES
         main.cpp
         service.cpp
+        crypto_config.cpp
 )
 
 set(HEADERS
         service.h
+        crypto_config.h
 )
 
 add_executable(
@@ -13,4 +15,4 @@ add_executable(
         ${HEADERS}
 )
 
-target_link_libraries(server_service PRIVATE Qt6::WebSockets boost::boost message)
+target_link_libraries(server_service PRIVATE Qt6::WebSockets Boost::headers message)
