WIP: send intermediate keys

--- a/src/client/app/CMakeLists.txt
+++ b/src/client/app/CMakeLists.txt
@@ -1,10 +1,12 @@
 set(HEADERS
         client.h
+        crypto_config.h
 )
 
 set(SOURCES
         main.cpp
         client.cpp
+        crypto_config.cpp
 )
 
 add_executable(client_app
@@ -12,4 +14,4 @@ add_executable(client_app
         ${HEADERS}
 )
 
-target_link_libraries(client_app PRIVATE Qt6::Core Qt6::WebSockets message)
+target_link_libraries(client_app PRIVATE Qt6::Core Qt6::WebSockets message diffie_hellman)
